--- a/src/index.css
+++ b/src/index.css
@@ -372,3 +372,23 @@ footer{
     font-size: 1.5rem;
   }
 }
+@media (max-width: 1100px) {
+  .hero-container{
+    height: auto;
+  }
+  .hero{
+    flex-direction: column;
+  }
+  
+}
+@media (max-width: 850px){
+  .logo{
+    display: none;
+  }
+  nav > div{
+    width: 100%;
+  }
+  section > div{
+    flex-direction: column;
+  }
+}
