--- a/src/pages/insta.css
+++ b/src/pages/insta.css
@@ -22,7 +22,7 @@
     object-fit: cover;
     margin-right: 10px;
 }
-figcaption{
+.small-font{
     font-size: 10px;
     text-align: center;
     padding-right: 10px;
@@ -80,4 +80,116 @@ figcaption{
 .col-1, .col-2, .col-3{
     display: grid;
     gap: 3px;
+}
+.profile-info{
+    display: flex;
+    padding: 1rem;
+}
+.profile-info > div > h4{
+    margin-bottom: 1rem;
+}
+.profile-info > div > button{
+    padding: 5px;
+    border-radius: 6px;
+    background-color: var(--background-color);
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+}
+.profile-info > div > button:nth-child(3){
+    margin-left: 1rem;
+}
+.profile-description{
+    margin: 1rem;
+}
+.profile-stats{
+    padding: 10px 0 10px 0;
+    border-top: 3px solid var(--primary-color);
+    border-bottom: 3px solid var(--primary-color);
+}
+.profile-posts{
+    margin: 1rem;
+}
+.sheng-profile, .preston-profile, .luis-profile{
+    border-radius: 50px;
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border: 1px solid var(--primary-color);
+}
+.padding-1rem{
+    padding: 1rem;
+}
+.padding-1rem > h4{
+    color: var(--secondary-color)
+}
+.messages-profile{
+    display: flex;
+    gap: 10px;
+}
+.note{
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+    width: 60px;
+    position: absolute;
+    margin: 0.1rem;
+    padding: 0.1rem;
+}
+.message{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.video{
+    width: 100%;
+    height: 650px;
+    position: relative;
+}
+.video-heart, .comment-button{
+    width: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.video-heart{
+    position: absolute;
+    right: 15px;
+    background: none;
+    bottom: 40%;
+}
+.video-heart *{
+    background: none;
+    padding: 0 !important;
+}
+.video-heart > p{
+    background: none;
+    text-align: center;
+}
+.comment{
+    position: absolute;
+    right: 15px;
+    background: none;
+    bottom: 32%;
+}
+.comment-button{
+    font-size: 2rem;
+    background: none;
+}
+.comment *{
+    background: none;
+    text-align: center;
+}
+.video-message{
+    position: absolute;
+    right: 15px;
+    background: none;
+    bottom: 25%;
+    width: 40px;
+}
+.video-creator{
+    position: absolute;
+    bottom: 100px;
+    left: 30px;
+    background: none;
+
 }
