--- a/src/pages/insta.css
+++ b/src/pages/insta.css
@@ -219,11 +219,28 @@
     display: none;
     position: absolute;
     width: 348px;
-    height: 500px;
+    height: 550px;
     background: white;
     border-radius: 10px;
     top: 20%;
     right: 26px;
+    overflow: auto;
+    padding-bottom: 10px;
+}
+.story-profile{
+    position: absolute;
+    background: transparent;
+    margin-top: 10px;
+}
+.story-profile *{
+    background: transparent;
+}
+.absolute{
+    position: absolute;
+    bottom: 100px;
+    left: 20px;
+    z-index: 3;
+    background: transparent;
 }
 .popover *{
     background: transparent;
@@ -240,6 +257,7 @@
     height: auto;
     object-fit: contain;
     padding: 10px;
+    z-index: 5;
 }
 .story-user{
     width: 30px;
@@ -319,4 +337,10 @@ input[type="file"] {
 }
 .post-image{
     background: transparent;
+}
+.story{
+    width: 100%;
+    height: 700px;
+    padding: 2px;
+    object-fit: cover;
 }
