--- a/src/pages/insta.css
+++ b/src/pages/insta.css
@@ -258,6 +258,7 @@
     object-fit: contain;
     padding: 10px;
     z-index: 5;
+    max-height: 600px;
 }
 .story-user{
     width: 30px;
@@ -274,6 +275,9 @@
     gap: 10px;
     padding-left: 20px;
     width: 100%;
+    position: absolute;
+    top: 65px;
+    
 }
 .story-description{
     width: 100%;
@@ -340,7 +344,64 @@ input[type="file"] {
 }
 .story{
     width: 100%;
-    height: 700px;
+    height: auto;
     padding: 2px;
-    object-fit: cover;
+    object-fit: contain;
+    padding-top: 50px;
+}
+.home-page-button{
+    position: absolute;
+    top: 70px;
+    left: 360px;
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+.progress-bars{
+    display: flex;
+    gap: 2px;
+    justify-content: space-evenly;
+}
+.progress-bar{
+    background-color: var(--primary-color);
+    height: 4px;
+    width: 100%;
+}
+.inner-progress-bar{
+    width: 0px;
+    height: 1px;
+    border: 2px solid white;
+    position: absolute;
+    z-index: 3;
+    left: 0;
+    animation: move-right 5s infinite forwards linear;
+}
+.next-story-button, .prev-story-button{
+    z-index: 5;
+    background: transparent;
+    border-radius: 100%;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    background: lightgray;
+    border: none;
+    top: 50%;
+}
+.next-story-button > svg, .prev-story-button > svg{
+    background: transparent;
+    font-size: 1.25rem;
+}
+.prev-story-button{
+    left: 10px;
+}
+.next-story-button{
+    right: 10px;
+}
+
+@keyframes move-right{
+    from{
+        width: 0;
+    }
+    to{
+        width: 100%;
+    }
 }
